force-app/main/default/objects/GameSession__c/GameSession__c.object-meta.xml
<CustomObject>
    <label>GameSession</label>
    <nameField>
        <label>Game Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GameSessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>