force-app/main/default/objects/GameSession__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>The length of the session.</description>
    <inlineHelpText>The length of the session.</inlineHelpText>
    <label>Duration In Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>