force-app/main/default/objects/GameSession__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the game played in the session.</description>
    <inlineHelpText>Identifies the game played in the session.</inlineHelpText>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Game Sessions</relationshipLabel>
    <relationshipName>GameSessions</relationshipName>
    <type>Lookup</type>
</CustomField>