force-app/main/default/objects/GameSession__c/fields/Gamer__c.field-meta.xml
<CustomField>
    <fullName>Gamer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the session to a specific player</description>
    <inlineHelpText>Connects the session to a specific player</inlineHelpText>
    <label>Gamer</label>
    <referenceTo>Gamer__c</referenceTo>
    <relationshipLabel>GameSessions</relationshipLabel>
    <relationshipName>GameSessions</relationshipName>
    <type>Lookup</type>
</CustomField>