force-app/main/default/objects/GameSession__c/fields/GamerValidation__c.field-meta.xml
<CustomField>
    <fullName>GamerValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if gamer field is empty.</description>
    <inlineHelpText>Tracks if gamer field is empty.</inlineHelpText>
    <label>GamerValidation</label>
    <type>Checkbox</type>
</CustomField>