force-app/main/default/objects/GameSession__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>This formula is checking if the difficulty level of the game is easy, medium, or hard. According to the difficulty level the duration of each game session is multiplied by either 10, 20, or 30 in order to calculate a core.</description>
    <formula>CASE( Game__r.Difficulty_Level__c, &quot;Easy&quot;, Duration__c * 10, &quot;Medium&quot;, Duration__c * 20, &quot;Hard&quot;, Duration__c * 30, Duration__c * 1)</formula>
    <inlineHelpText>Score calculated through duration and game difficulty.</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>