force-app/main/default/objects/GameSession__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>Tracks when the session happens.</description>
    <inlineHelpText>Tracks when the session happens.</inlineHelpText>
    <label>Session Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>