force-app/main/default/objects/GameSession__c/validationRules/Require_Gamer_If_Validated.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Gamer_If_Validated</fullName>
    <active>true</active>
    <description>if the GamerValidation field is checked then an error message should be thrown.</description>
    <errorConditionFormula>GamerValidation__c = TRUE</errorConditionFormula>
    <errorDisplayField>Gamer__c</errorDisplayField>
    <errorMessage>There must be a value in the Gamer field before the session can be saved.</errorMessage>
</ValidationRule>